--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d dist",
-    "predeploy": "npm run deploy"
+    "deploy": "gh-pages -d dist"
  
 
   },
